array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var nbNiveaux = 0
  val longueur = getNombreValeurs(num) 
  for (i <- 1 to longueur - 1) {
    if (num(i) < num(i+1)) {
      nbNiveaux += 1
    }
  }
  return nbNiveaux
}